--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,23 @@
   margin-top: 30px;
 }
 
+#win-page {
+  height: 600px;
+  width: 1000px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  margin: 0 auto;
+  border: 1px solid black;
+  margin-top: 30px; 
+}
+
+#win-page {
+  display: none;
+}
+
 #lose-page {
   display: none;
 }
