--- a/css/style.css
+++ b/css/style.css
@@ -37,17 +37,23 @@
 
 #start-page h1 {
   font-size: 50px;
-  color: lightblue;
-  margin-top: -15%;
-  padding-bottom: 50px;
+  color: rgb(71, 5, 8);
+  text-shadow: 0px 1px 5px rgb(213, 195, 140);
+  border-bottom: 3px solid rgb(71, 5, 8);
+  width: 50%;
+  margin: 0 auto;
   
 }
 
 #start-page p {
-  color: black;
+  font-size: 20px;
+  font-weight: 800;
+  color: rgb(71, 5, 8);
+  text-shadow: 0px 1px 3px rgb(179, 171, 148);
+  background-color: rgb(189, 186, 175);
+  opacity: 0.8;
   width: 50%;
-  margin-left: 25%;
-  margin-bottom: 5%;
+  margin: 0 auto;
   
 }
 
