--- a/css/style.css
+++ b/css/style.css
@@ -48,12 +48,14 @@
 #start-page p {
   font-size: 20px;
   font-weight: 800;
-  color: rgb(71, 5, 8);
-  text-shadow: 0px 1px 3px rgb(179, 171, 148);
-  background-color: rgb(189, 186, 175);
+  color: rgb(179, 171, 148);
+  text-shadow: 0px 0px 5px rgb(71, 5, 8);
+  
+  /*background-color: rgb(189, 186, 175);
   opacity: 0.8;
+  */
   width: 50%;
-  margin: 0 auto;
+  /*margin: 0 auto;*/
   
 }
 
