--- a/css/style.css
+++ b/css/style.css
@@ -6,21 +6,8 @@
 /* Basic styles, change according to your style */
 
 
-#lose-page {
-  height: 600px;
-  width: 1000px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-  margin: 0 auto;
-  border: 1px solid black;
-  margin-top: 30px;
-}
-
 #start-page {
-  background-image: url("../img/startpage.jpeg");
+  background-image: url("../img/wp2632905-wallpaper-zombie.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 600px;
@@ -32,7 +19,7 @@
   text-align: center;
   margin: 0 auto;
   border: 1px solid black;
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 #start-page h1 {
@@ -41,7 +28,7 @@
   text-shadow: 0px 1px 5px rgb(213, 195, 140);
   border-bottom: 3px solid rgb(71, 5, 8);
   width: 50%;
-  margin: 0 auto;
+  margin: 95px 0 0 250px;
   
 }
 
@@ -49,16 +36,71 @@
   font-size: 20px;
   font-weight: 800;
   color: rgb(179, 171, 148);
-  text-shadow: 0px 0px 5px rgb(71, 5, 8);
-  
-  /*background-color: rgb(189, 186, 175);
-  opacity: 0.8;
-  */
+  text-shadow: 1px 2px 10px rgb(71, 5, 8);
+  margin: 30px 0 0 250px;
   width: 50%;
-  /*margin: 0 auto;*/
-  
 }
 
+#start {
+  margin-top: 20px;
+  width: 10%;
+  height: 10%;
+  color: rgb(71, 5, 8);
+  border: 2px solid rgb(71, 5, 8);
+  border-radius: 0px;
+  padding: 0 auto;
+  display: inline-block;
+  font-family: "Lucida Console", Monaco, monospace;
+  font-size: 14px;
+  letter-spacing: 1px;
+  cursor: pointer;
+  box-shadow: inset 0 0 0 0 rgb(179, 171, 148);
+  -webkit-transition: ease-out 0.4s;
+  -moz-transition: ease-out 0.4s;
+  transition: ease-out 0.4s;
+}
+
+#start:hover {
+  box-shadow: inset 0 100px 0 0 rgb(71, 5, 8);
+  color: rgb(179, 171, 148);
+}
+
+
+
+.spacekey {
+  width: 70%;
+}
+
+.arrowleft {
+  width: 95%;
+}
+
+.arrowright {
+  width: 95%;
+}
+
+.keys {
+  display: flex;
+  justify-content: center;
+  padding-left: 370px;
+  padding-top: 25px;
+  width: 30%;
+}
+
+.keys h4 {
+  font-size: 18px;
+  color: rgb(71, 5, 8);
+  text-shadow: 0px 1px 5px rgb(213, 195, 140);
+  font-weight: 900;
+}
+
+.rightsect {
+  padding-left: 25px;
+}
+
+.shoot {
+  padding-top: 2px;
+}
 
 
 
@@ -72,15 +114,46 @@
   text-align: center;
   margin: 0 auto;
   border: 1px solid black;
-  margin-top: 30px; 
+  margin-top: 30px;
+  background-image: url("../img/survived.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat; 
 }
 
 #win-page {
   display: none;
 }
 
+#win-page h1 {
+  font-size: 50px;
+  color: rgb(71, 5, 8);
+  text-shadow: 0px 1px 3px rgb(213, 195, 140);
+}
+
+#lose-page {
+  height: 600px;
+  width: 1000px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  margin: 0 auto;
+  border: 1px solid black;
+  margin-top: 30px;
+  background-image: url("../img/youdied.jpg");
+  background-size: cover;
+  background-repeat: no-repeat; 
+}
+
 #lose-page {
   display: none;
+}
+
+#lose-page h1 {
+  font-size: 50px;
+  color: rgb(71, 5, 8);
+  text-shadow: 0px 1px 3px rgb(213, 195, 140);
 }
 
 canvas {
