--- a/css/style.css
+++ b/css/style.css
@@ -58,11 +58,13 @@
   -webkit-transition: ease-out 0.4s;
   -moz-transition: ease-out 0.4s;
   transition: ease-out 0.4s;
+  opacity: 0.5;
 }
 
 #start:hover {
   box-shadow: inset 0 100px 0 0 rgb(71, 5, 8);
   color: rgb(179, 171, 148);
+  opacity: 0.7;
 }
 
 
